<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.FragmentBG"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fields_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/filters_title_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/instruction_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filters_description_text"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fields_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout">

        <CheckBox
            android:id="@+id/hydration_station_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydration_station_checkbox_text"
            app:layout_constraintBottom_toTopOf="@+id/drinking_fountain_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/drinking_fountain_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinking_fountain_checkbox_text"
            app:layout_constraintBottom_toTopOf="@+id/ratings_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hydration_station_check" />

        <CheckBox
            android:id="@+id/ratings_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_checkbox_text"
            app:layout_constraintBottom_toTopOf="@+id/favorites_check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drinking_fountain_check" />

        <RelativeLayout
            android:id="@+id/rating_dropdown_bg"
            style="@style/Theme.FragmentBG"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/favorites_check"
            app:layout_constraintStart_toEndOf="@+id/ratings_check"
            app:layout_constraintTop_toBottomOf="@+id/drinking_fountain_check">

            <Spinner
                android:id="@+id/rating_dropdown"
                style="@style/Theme.FragmentBG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/dropdown_icon"
            style="@style/Theme.DropdownIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toTopOf="@+id/rating_dropdown_bg"
            app:layout_constraintEnd_toEndOf="@+id/rating_dropdown_bg"
            app:layout_constraintBottom_toBottomOf="@+id/rating_dropdown_bg"
            android:contentDescription="@string/dropdown_arrow_description" />

        <TextView
            android:id="@+id/ratings_denom_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/rating_denom_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/favorites_check"
            app:layout_constraintStart_toEndOf="@+id/rating_dropdown_bg"
            app:layout_constraintTop_toBottomOf="@+id/drinking_fountain_check" />

        <CheckBox
            android:id="@+id/favorites_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites_checkbox_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratings_check" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fields_layout">

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_filters_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/reset_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_filters_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/apply_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/close_button"
        style="@style/Theme.AddSourceFragmentX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>