<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.AddSourceFragmentBG"
    tools:context=".AddSourceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_source_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/error_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_source_description"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_layout">

        <EditText
            android:id="@+id/title_field"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/title_field_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/lat_lng_values"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lat_lng_labels"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fillable_field_labels"
            app:layout_constraintEnd_toStartOf="@+id/lat_lng_values"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_field">

            <TextView
                android:id="@+id/latitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_source_latitude_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/longitude_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/longitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_source_longitude_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitude_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lat_lng_values"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/fillable_field_values"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lat_lng_labels"
            app:layout_constraintTop_toBottomOf="@+id/title_field">

            <TextView
                android:id="@+id/latitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/longitude_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/longitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitude_value" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fillable_field_labels"
            android:layout_width="180dp"
            android:layout_height="102dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fillable_field_values"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lat_lng_labels">

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_source_type_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/pword_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pword_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_source_floor_label"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fillable_field_values"
            android:layout_width="180dp"
            android:layout_height="102dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fillable_field_labels"
            app:layout_constraintTop_toBottomOf="@+id/lat_lng_values">

            <EditText
                android:id="@+id/email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_source_type_hint"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/pword_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="Type of Water Source" />

            <EditText
                android:id="@+id/pword_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/add_source_floor_hint"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_value"
                android:autofillHints="Floor that Source is on" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_source_confirm_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fields" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        style="@style/Theme.AddSourceFragmentX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/x" />

</androidx.constraintlayout.widget.ConstraintLayout>